syntax = "proto3";

package pcs;

service PCSService {
	rpc StartScheduler(StartSchedulerRequest) returns (StartSchedulerReply);
	rpc StartWorker(StartWorkerRequest) returns (StartWorkerReply);
	rpc StartStorage(StartStorageRequest) returns (StartStorageReply);
}

message StartSchedulerRequest {
	string serverId = 1;
	string url = 2;
}

message StartSchedulerReply {
	
}

message StartWorkerRequest {
	string serverId = 1;
	string url = 2;
	int32 workerDelay = 3;
	bool debugActive = 4;
	string puppetMasterURL = 5;
}

message StartWorkerReply {

}

message StartStorageRequest {
	string url = 1;
	int32 gossipDelay = 2;
}

message StartStorageReply {
}